Implemented editor for NMAP service