@@ -113,6 +113,7 @@ application {
     "--add-opens=javafx.graphics/javafx.scene=ALL-UNNAMED",
     "--add-opens=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED",
     "--add-opens=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED",
+    "--add-opens=javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED",
     "--add-opens=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED",
     "--add-opens=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED",
     "--add-opens=javafx.controls/javafx.scene.control.skin=ALL-UNNAMED",
